--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag scmmishra/picoletter:${{ github.sha }} --tag scmmishra/picoletter:latest
+        run: docker build . --file Dockerfile --tag scmmishra/hyperbulletin:${{ github.sha }} --tag scmmishra/hyperbulletin:latest
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
@@ -19,5 +19,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push to DockerHub
         run: |
-          docker push scmmishra/picoletter:${{ github.sha }}
-          docker push scmmishra/picoletter:latest
+          docker push scmmishra/hyperbulletin:${{ github.sha }}
+          docker push scmmishra/hyperbulletin:latest
